Commit Entrega